Corrected fixable project warnings and removed all vulnerabilities; Code cleanup and optimization based on SonarQube; Fixed authentication token expiration check; Removed testing dependencies and tests; Updated pom to latest versions; Added editing of prepared solidity contract code; Additional optimization and improvements